--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
 </head>
 <body>
-    
+    <h1>Rock, Paper, Scissors!</h1>
+    <div class = 'buttons'>
+        <button class = 'button' id="rock">Rock
+            <img src = 'images/rock.png' class = 'play-image'>
+        </button>
+        <button class = 'button' id="paper">Paper
+            <img src = 'images/paper.png' class = 'play-image'>
+        </button>
+        <button class = 'button' id="scissors">Scissors
+            <img src = 'images/scissors.png' class = 'play-image'>
+        </button>
+    </div>
+    <div class="scores">
+        <div class="score">Player: <div class='player-score'>0</div></div>
+        <div class="message"></div>
+        <div class="score">Computer: <div class="computer-score">0</div></div>
+    </div>
+    <div class="winner"></div>
 </body>
 </html>
